--- a/Convert.html
+++ b/Convert.html
@@ -2,9 +2,10 @@
 
 <html>
 
-<script src="./script/jquery-2.1.3.min.js"></script>
-<script src="./script/angular.min.js"></script>
-<script src="./script/xml2json.js"></script>
+
+<script src="angular.min.js"></script>
+<script src="xml2json.min.js"></script>
+<script src="xml2json.js"></script>
 
 <head>
 	<title>Convert XML to JSON In Angular JS - SibeeshPassion</title>
