--- a/Convert.html
+++ b/Convert.html
@@ -4,9 +4,9 @@
 <html>
 
 
-<script src="angular.min.js"></script>
-<script src="xml2json.min.js"></script>
-<script src="xml2json.js"></script>
+<script src="./script/angular.min.js"></script>
+<script src="./script/xml2json.min.js"></script>
+<script src="./script/xml2json.js"></script>
 
 <head>
 	<title>Convert XML to JSON In Angular JS - SibeeshPassion</title>
