--- a/test-output/index.html
+++ b/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\Users\ssinquin\Documents\Secu\ZAP\InvokeZAP\testng.xml</span>
+                    <span>C:\Users\mperret\workspace\TI_ZAP\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img width="3%" src="failed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Test.NewTest_ZAP" hash-for-method="generationReport">generationReport</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,11 +116,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Test.NewTest_ZAP" hash-for-method="demarrageZap">demarrageZap</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="Test.NewTest_ZAP" hash-for-method="generationReport">generationReport</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -126,6 +135,31 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">Test.NewTest_ZAP</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="generationReport">
+                  </a> <!-- generationReport -->
+                  <span class="method-name">generationReport</span>
+                  <div class="stack-trace">br.com.softplan.security.zap.zaproxy.clientapi.core.ClientApiException: java.lang.NullPointerException
+	at br.com.softplan.security.zap.zaproxy.clientapi.core.ClientApi.callApiOther(ClientApi.java:324)
+	at br.com.softplan.security.zap.zaproxy.clientapi.gen.Core.xmlreport(Core.java:547)
+	at configZAP.Zap.GeneratingReport(Unknown Source)
+	at Test.NewTest_ZAP.generationReport(Unknown Source)
+Caused by: java.lang.NullPointerException
+	at br.com.softplan.security.zap.zaproxy.clientapi.core.ClientApi.callApiOther(ClientApi.java:319)
+	... 26 more
+... Removed 23 stack frames
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -141,13 +175,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="generationReport">
-                  </a> <!-- generationReport -->
-                  <span class="method-name">generationReport</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="lancementSelenium">
                   </a> <!-- lancementSelenium -->
                   <span class="method-name">lancementSelenium</span>
@@ -158,7 +185,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\Users\ssinquin\Documents\Secu\ZAP\InvokeZAP\testng.xml</span>
+            <span class="header-content">C:\Users\mperret\workspace\TI_ZAP\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -211,20 +238,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'lancementSelenium')
 data.setCell(0, 2, 'Test.NewTest_ZAP')
-data.setCell(0, 3, 16083);
+data.setCell(0, 3, 11822);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'generationReport')
 data.setCell(1, 2, 'Test.NewTest_ZAP')
-data.setCell(1, 3, 6538);
+data.setCell(1, 3, 1030);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'demarrageZap')
 data.setCell(2, 2, 'Test.NewTest_ZAP')
-data.setCell(2, 3, 9);
+data.setCell(2, 3, 12);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -257,11 +284,13 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">lancementSelenium</span>
-                <span class="method-start">9 ms</span>
+                <span class="method-start">13 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">generationReport</span>
-                <span class="method-start">16093 ms</span>
+                <span class="method-start">11836 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
